# retina

./: .gitignore  README.md  pyproject.toml
Classi4RPE/: Classi4RPE.py  Functions_Classi4RPE.py  classificationFunction.py
retina/: classificationFunction.py  mainClasification.py  test_clasification.py  test_clasification2.py  test_clasification3.py
