[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name="retina"
version="0.0.1"
dependencies = [
        'numpy',
        'matplotlib',
        'napari',
        'pytest',
        'panda',
        'odfpy'
        'tifffile',
        'scipy',
        ]
requires-python='>=3.9'
authors = [
        {name = "Ondrej Stranik", email = "ondra.stranik@gmail.com"},
]

description="package to classify granules in retina cell"
readme = "README.md"
license = "MIT"
keywords = ["classification"]
classifiers = [
  "Development Status :: 3- Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
[project.urls]
Repository = "https://github.com/ondrejstranik/retina"
